--- a/playlist-app/templates/playlist.html
+++ b/playlist-app/templates/playlist.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="jumbotron">
-  <h1>{{ playlist.name }}!</h1>
+  <h1>{{ playlist.name }}</h1>
   {% if playlist.description %}
   <p class="lead">{{ playlist.description }}</p>
   {% endif %}
