--- a/playlist-app/templates/song.html
+++ b/playlist-app/templates/song.html
@@ -3,12 +3,17 @@
 {% block content %}
 
 <div class="jumbotron">
-  <h1>{{ song.title }}</h1>
+  <h1>{{ song.title }}!</h1>
   <p class="lead">&ndash; {{ song.artist }}</p>
 </div>
 
-<ul>
-  DISPLAY ALL OF THE PLAYLISTS THAT THIS SONG IS A PART OF
-</ul>
+<div class="text-info">
+  <h3>ALL THE PLAYLISTS THIS SONG IS A PART OF</h3>
+  <ul>
+    {% for playlist in song.album %}
+    <li><a href="/playlists/{{playlist.id}}">{{playlist.name}}</a></li>
+    {% endfor %}
+  </ul>
+</div>
 
 {% endblock %}
